# esp-xingzhi

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild
